// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden pricing snapshots > prices "away favourite" stably 1`] = `
[
  {
    "bookSum": 1.05,
    "key": "1X2",
    "odds": [
      {
        "key": "1X2:HOME",
        "odds": 4.8088,
      },
      {
        "key": "1X2:DRAW",
        "odds": 3.638,
      },
      {
        "key": "1X2:AWAY",
        "odds": 1.7631,
      },
    ],
  },
  {
    "bookSum": 2.1,
    "key": "DC",
    "odds": [
      {
        "key": "DC:1X",
        "odds": 2.009,
      },
      {
        "key": "DC:12",
        "odds": 1.2959,
      },
      {
        "key": "DC:X2",
        "odds": 1.204,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "DNB",
    "odds": [
      {
        "key": "DNB:HOME",
        "odds": 3.4551,
      },
      {
        "key": "DNB:AWAY",
        "odds": 1.3148,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "BTTS",
    "odds": [
      {
        "key": "BTTS:YES",
        "odds": 1.8435,
      },
      {
        "key": "BTTS:NO",
        "odds": 1.9702,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "CS",
    "odds": [
      {
        "key": "CS:0-0",
        "odds": 12.2211,
      },
      {
        "key": "CS:0-1",
        "odds": 9.0461,
      },
      {
        "key": "CS:0-2",
        "odds": 9.3509,
      },
      {
        "key": "CS:0-3",
        "odds": 15.8848,
      },
      {
        "key": "CS:0-4",
        "odds": 35.8042,
      },
      {
        "key": "CS:0-5",
        "odds": 100.4984,
      },
      {
        "key": "CS:1-0",
        "odds": 18.0637,
      },
      {
        "key": "CS:1-1",
        "odds": 7.8533,
      },
      {
        "key": "CS:1-2",
        "odds": 9.8346,
      },
      {
        "key": "CS:1-3",
        "odds": 16.7063,
      },
      {
        "key": "CS:1-4",
        "odds": 37.656,
      },
      {
        "key": "CS:1-5",
        "odds": 105.6961,
      },
      {
        "key": "CS:2-0",
        "odds": 31.0824,
      },
      {
        "key": "CS:2-1",
        "odds": 17.9302,
      },
      {
        "key": "CS:2-2",
        "odds": 20.4454,
      },
      {
        "key": "CS:2-3",
        "odds": 34.7314,
      },
      {
        "key": "CS:2-4",
        "odds": 78.2844,
      },
      {
        "key": "CS:2-5",
        "odds": 219.7356,
      },
      {
        "key": "CS:3-0",
        "odds": 96.2654,
      },
      {
        "key": "CS:3-1",
        "odds": 55.5316,
      },
      {
        "key": "CS:3-2",
        "odds": 63.3216,
      },
      {
        "key": "CS:3-3",
        "odds": 107.5668,
      },
      {
        "key": "CS:3-4",
        "odds": 242.4552,
      },
      {
        "key": "CS:3-5",
        "odds": 680.5444,
      },
      {
        "key": "CS:4-0",
        "odds": 395.5969,
      },
      {
        "key": "CS:4-1",
        "odds": 228.2039,
      },
      {
        "key": "CS:4-2",
        "odds": 260.2164,
      },
      {
        "key": "CS:4-3",
        "odds": 442.0395,
      },
      {
        "key": "CS:4-4",
        "odds": 996.3553,
      },
      {
        "key": "CS:4-5",
        "odds": 2796.6574,
      },
      {
        "key": "CS:5-0",
        "odds": 2024.4524,
      },
      {
        "key": "CS:5-1",
        "odds": 1167.825,
      },
      {
        "key": "CS:5-2",
        "odds": 1331.648,
      },
      {
        "key": "CS:5-3",
        "odds": 2262.1207,
      },
      {
        "key": "CS:5-4",
        "odds": 5098.8112,
      },
      {
        "key": "CS:5-5",
        "odds": 14311.7902,
      },
      {
        "key": "CS:OTHER",
        "odds": 96.4713,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_0.5",
    "odds": [
      {
        "key": "OU:0.5:OVER",
        "odds": 1.0713,
      },
      {
        "key": "OU:0.5:UNDER",
        "odds": 8.5781,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_1.5",
    "odds": [
      {
        "key": "OU:1.5:OVER",
        "odds": 1.2808,
      },
      {
        "key": "OU:1.5:UNDER",
        "odds": 3.7143,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_2.5",
    "odds": [
      {
        "key": "OU:2.5:OVER",
        "odds": 1.8825,
      },
      {
        "key": "OU:2.5:UNDER",
        "odds": 1.9276,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_3.5",
    "odds": [
      {
        "key": "OU:3.5:OVER",
        "odds": 3.1619,
      },
      {
        "key": "OU:3.5:UNDER",
        "odds": 1.3629,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_4.5",
    "odds": [
      {
        "key": "OU:4.5:OVER",
        "odds": 5.8031,
      },
      {
        "key": "OU:4.5:UNDER",
        "odds": 1.1394,
      },
    ],
  },
]
`;

exports[`golden pricing snapshots > prices "even match" stably 1`] = `
[
  {
    "bookSum": 1.05,
    "key": "1X2",
    "odds": [
      {
        "key": "1X2:HOME",
        "odds": 2.5259,
      },
      {
        "key": "1X2:DRAW",
        "odds": 3.2781,
      },
      {
        "key": "1X2:AWAY",
        "odds": 2.865,
      },
    ],
  },
  {
    "bookSum": 2.1,
    "key": "DC",
    "odds": [
      {
        "key": "DC:1X",
        "odds": 1.4264,
      },
      {
        "key": "DC:12",
        "odds": 1.349,
      },
      {
        "key": "DC:X2",
        "odds": 1.5206,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "DNB",
    "odds": [
      {
        "key": "DNB:HOME",
        "odds": 1.7949,
      },
      {
        "key": "DNB:AWAY",
        "odds": 2.0289,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "BTTS",
    "odds": [
      {
        "key": "BTTS:YES",
        "odds": 1.7697,
      },
      {
        "key": "BTTS:NO",
        "odds": 2.0622,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "CS",
    "odds": [
      {
        "key": "CS:0-0",
        "odds": 11.0562,
      },
      {
        "key": "CS:0-1",
        "odds": 11.9353,
      },
      {
        "key": "CS:0-2",
        "odds": 16.4284,
      },
      {
        "key": "CS:0-3",
        "odds": 38.8523,
      },
      {
        "key": "CS:0-4",
        "odds": 121.9204,
      },
      {
        "key": "CS:0-5",
        "odds": 476.4501,
      },
      {
        "key": "CS:1-0",
        "odds": 10.9411,
      },
      {
        "key": "CS:1-1",
        "odds": 7.0156,
      },
      {
        "key": "CS:1-2",
        "odds": 12.2307,
      },
      {
        "key": "CS:1-3",
        "odds": 28.925,
      },
      {
        "key": "CS:1-4",
        "odds": 90.7681,
      },
      {
        "key": "CS:1-5",
        "odds": 354.7107,
      },
      {
        "key": "CS:2-0",
        "odds": 14.1212,
      },
      {
        "key": "CS:2-1",
        "odds": 11.3394,
      },
      {
        "key": "CS:2-2",
        "odds": 18.0003,
      },
      {
        "key": "CS:2-3",
        "odds": 42.5697,
      },
      {
        "key": "CS:2-4",
        "odds": 133.5859,
      },
      {
        "key": "CS:2-5",
        "odds": 522.0373,
      },
      {
        "key": "CS:3-0",
        "odds": 30.9621,
      },
      {
        "key": "CS:3-1",
        "odds": 24.8628,
      },
      {
        "key": "CS:3-2",
        "odds": 39.4674,
      },
      {
        "key": "CS:3-3",
        "odds": 93.3382,
      },
      {
        "key": "CS:3-4",
        "odds": 292.9,
      },
      {
        "key": "CS:3-5",
        "odds": 1144.6179,
      },
      {
        "key": "CS:4-0",
        "odds": 90.08,
      },
      {
        "key": "CS:4-1",
        "odds": 72.3348,
      },
      {
        "key": "CS:4-2",
        "odds": 114.825,
      },
      {
        "key": "CS:4-3",
        "odds": 271.5548,
      },
      {
        "key": "CS:4-4",
        "odds": 852.1524,
      },
      {
        "key": "CS:4-5",
        "odds": 3330.1084,
      },
      {
        "key": "CS:5-0",
        "odds": 326.3679,
      },
      {
        "key": "CS:5-1",
        "odds": 262.0754,
      },
      {
        "key": "CS:5-2",
        "odds": 416.0213,
      },
      {
        "key": "CS:5-3",
        "odds": 983.8673,
      },
      {
        "key": "CS:5-4",
        "odds": 3087.4247,
      },
      {
        "key": "CS:5-5",
        "odds": 12065.2815,
      },
      {
        "key": "CS:OTHER",
        "odds": 202.2225,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_0.5",
    "odds": [
      {
        "key": "OU:0.5:OVER",
        "odds": 1.0805,
      },
      {
        "key": "OU:0.5:UNDER",
        "odds": 8.0327,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_1.5",
    "odds": [
      {
        "key": "OU:1.5:OVER",
        "odds": 1.309,
      },
      {
        "key": "OU:1.5:UNDER",
        "odds": 3.4955,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_2.5",
    "odds": [
      {
        "key": "OU:2.5:OVER",
        "odds": 1.9723,
      },
      {
        "key": "OU:2.5:UNDER",
        "odds": 1.8417,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_3.5",
    "odds": [
      {
        "key": "OU:3.5:OVER",
        "odds": 3.3902,
      },
      {
        "key": "OU:3.5:UNDER",
        "odds": 1.3244,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_4.5",
    "odds": [
      {
        "key": "OU:4.5:OVER",
        "odds": 6.3117,
      },
      {
        "key": "OU:4.5:UNDER",
        "odds": 1.1216,
      },
    ],
  },
]
`;

exports[`golden pricing snapshots > prices "high scoring" stably 1`] = `
[
  {
    "bookSum": 1.05,
    "key": "1X2",
    "odds": [
      {
        "key": "1X2:HOME",
        "odds": 2.0397,
      },
      {
        "key": "1X2:DRAW",
        "odds": 4.7672,
      },
      {
        "key": "1X2:AWAY",
        "odds": 2.8574,
      },
    ],
  },
  {
    "bookSum": 2.1,
    "key": "DC",
    "odds": [
      {
        "key": "DC:1X",
        "odds": 1.4245,
      },
      {
        "key": "DC:12",
        "odds": 1.2082,
      },
      {
        "key": "DC:X2",
        "odds": 1.7534,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "DNB",
    "odds": [
      {
        "key": "DNB:HOME",
        "odds": 1.6383,
      },
      {
        "key": "DNB:AWAY",
        "odds": 2.2748,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "BTTS",
    "odds": [
      {
        "key": "BTTS:YES",
        "odds": 1.1849,
      },
      {
        "key": "BTTS:NO",
        "odds": 4.8538,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "CS",
    "odds": [
      {
        "key": "CS:0-0",
        "odds": 72.5779,
      },
      {
        "key": "CS:0-1",
        "odds": 70.1168,
      },
      {
        "key": "CS:0-2",
        "odds": 47.4407,
      },
      {
        "key": "CS:0-3",
        "odds": 64.4024,
      },
      {
        "key": "CS:0-4",
        "odds": 116.087,
      },
      {
        "key": "CS:0-5",
        "odds": 260.7196,
      },
      {
        "key": "CS:1-0",
        "odds": 56.4662,
      },
      {
        "key": "CS:1-1",
        "odds": 18.5004,
      },
      {
        "key": "CS:1-2",
        "odds": 18.5004,
      },
      {
        "key": "CS:1-3",
        "odds": 25.1149,
      },
      {
        "key": "CS:1-4",
        "odds": 45.2702,
      },
      {
        "key": "CS:1-5",
        "odds": 101.6723,
      },
      {
        "key": "CS:2-0",
        "odds": 34.131,
      },
      {
        "key": "CS:2-1",
        "odds": 15.692,
      },
      {
        "key": "CS:2-2",
        "odds": 14.2852,
      },
      {
        "key": "CS:2-3",
        "odds": 19.3926,
      },
      {
        "key": "CS:2-4",
        "odds": 34.9556,
      },
      {
        "key": "CS:2-5",
        "odds": 78.5068,
      },
      {
        "key": "CS:3-0",
        "odds": 39.3005,
      },
      {
        "key": "CS:3-1",
        "odds": 18.0688,
      },
      {
        "key": "CS:3-2",
        "odds": 16.4488,
      },
      {
        "key": "CS:3-3",
        "odds": 22.3298,
      },
      {
        "key": "CS:3-4",
        "odds": 40.25,
      },
      {
        "key": "CS:3-5",
        "odds": 90.3975,
      },
      {
        "key": "CS:4-0",
        "odds": 60.0867,
      },
      {
        "key": "CS:4-1",
        "odds": 27.6254,
      },
      {
        "key": "CS:4-2",
        "odds": 25.1487,
      },
      {
        "key": "CS:4-3",
        "odds": 34.1401,
      },
      {
        "key": "CS:4-4",
        "odds": 61.5385,
      },
      {
        "key": "CS:4-5",
        "odds": 138.2092,
      },
      {
        "key": "CS:5-0",
        "odds": 114.4636,
      },
      {
        "key": "CS:5-1",
        "odds": 52.6257,
      },
      {
        "key": "CS:5-2",
        "odds": 47.9075,
      },
      {
        "key": "CS:5-3",
        "odds": 65.036,
      },
      {
        "key": "CS:5-4",
        "odds": 117.2292,
      },
      {
        "key": "CS:5-5",
        "odds": 263.2848,
      },
      {
        "key": "CS:OTHER",
        "odds": 13.2566,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_0.5",
    "odds": [
      {
        "key": "OU:0.5:OVER",
        "odds": 1.0085,
      },
      {
        "key": "OU:0.5:UNDER",
        "odds": 17.1031,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_1.5",
    "odds": [
      {
        "key": "OU:1.5:OVER",
        "odds": 1.0352,
      },
      {
        "key": "OU:1.5:UNDER",
        "odds": 11.9002,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_2.5",
    "odds": [
      {
        "key": "OU:2.5:OVER",
        "odds": 1.1462,
      },
      {
        "key": "OU:2.5:UNDER",
        "odds": 5.6319,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_3.5",
    "odds": [
      {
        "key": "OU:3.5:OVER",
        "odds": 1.3781,
      },
      {
        "key": "OU:3.5:UNDER",
        "odds": 3.0827,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_4.5",
    "odds": [
      {
        "key": "OU:4.5:OVER",
        "odds": 1.8244,
      },
      {
        "key": "OU:4.5:UNDER",
        "odds": 1.9925,
      },
    ],
  },
]
`;

exports[`golden pricing snapshots > prices "home favourite" stably 1`] = `
[
  {
    "bookSum": 1.05,
    "key": "1X2",
    "odds": [
      {
        "key": "1X2:HOME",
        "odds": 1.6286,
      },
      {
        "key": "1X2:DRAW",
        "odds": 3.8812,
      },
      {
        "key": "1X2:AWAY",
        "odds": 5.6073,
      },
    ],
  },
  {
    "bookSum": 2.1,
    "key": "DC",
    "odds": [
      {
        "key": "DC:1X",
        "odds": 1.1662,
      },
      {
        "key": "DC:12",
        "odds": 1.2678,
      },
      {
        "key": "DC:X2",
        "odds": 2.2038,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "DNB",
    "odds": [
      {
        "key": "DNB:HOME",
        "odds": 1.244,
      },
      {
        "key": "DNB:AWAY",
        "odds": 4.0629,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "BTTS",
    "odds": [
      {
        "key": "BTTS:YES",
        "odds": 1.8528,
      },
      {
        "key": "BTTS:NO",
        "odds": 1.9597,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "CS",
    "odds": [
      {
        "key": "CS:0-0",
        "odds": 13.4315,
      },
      {
        "key": "CS:0-1",
        "odds": 21.4036,
      },
      {
        "key": "CS:0-2",
        "odds": 38.1466,
      },
      {
        "key": "CS:0-3",
        "odds": 124.6013,
      },
      {
        "key": "CS:0-4",
        "odds": 540.0347,
      },
      {
        "key": "CS:0-5",
        "odds": 2914.7243,
      },
      {
        "key": "CS:1-0",
        "odds": 9.1567,
      },
      {
        "key": "CS:1-1",
        "odds": 8.4287,
      },
      {
        "key": "CS:1-2",
        "odds": 20.2956,
      },
      {
        "key": "CS:1-3",
        "odds": 66.2929,
      },
      {
        "key": "CS:1-4",
        "odds": 287.3202,
      },
      {
        "key": "CS:1-5",
        "odds": 1550.7508,
      },
      {
        "key": "CS:2-0",
        "odds": 8.7775,
      },
      {
        "key": "CS:2-1",
        "odds": 9.7355,
      },
      {
        "key": "CS:2-2",
        "odds": 21.3453,
      },
      {
        "key": "CS:2-3",
        "odds": 69.7217,
      },
      {
        "key": "CS:2-4",
        "odds": 302.181,
      },
      {
        "key": "CS:2-5",
        "odds": 1630.9587,
      },
      {
        "key": "CS:3-0",
        "odds": 13.753,
      },
      {
        "key": "CS:3-1",
        "odds": 15.254,
      },
      {
        "key": "CS:3-2",
        "odds": 33.4446,
      },
      {
        "key": "CS:3-3",
        "odds": 109.2427,
      },
      {
        "key": "CS:3-4",
        "odds": 473.4689,
      },
      {
        "key": "CS:3-5",
        "odds": 2555.4495,
      },
      {
        "key": "CS:4-0",
        "odds": 28.5927,
      },
      {
        "key": "CS:4-1",
        "odds": 31.7133,
      },
      {
        "key": "CS:4-2",
        "odds": 69.5318,
      },
      {
        "key": "CS:4-3",
        "odds": 227.117,
      },
      {
        "key": "CS:4-4",
        "odds": 984.3484,
      },
      {
        "key": "CS:4-5",
        "odds": 5312.8148,
      },
      {
        "key": "CS:5-0",
        "odds": 74.0267,
      },
      {
        "key": "CS:5-1",
        "odds": 82.106,
      },
      {
        "key": "CS:5-2",
        "odds": 180.0187,
      },
      {
        "key": "CS:5-3",
        "odds": 588.0087,
      },
      {
        "key": "CS:5-4",
        "odds": 2548.4899,
      },
      {
        "key": "CS:5-5",
        "odds": 13754.9409,
      },
      {
        "key": "CS:OTHER",
        "odds": 68.6248,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_0.5",
    "odds": [
      {
        "key": "OU:0.5:OVER",
        "odds": 1.0637,
      },
      {
        "key": "OU:0.5:UNDER",
        "odds": 9.1011,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_1.5",
    "odds": [
      {
        "key": "OU:1.5:OVER",
        "odds": 1.2546,
      },
      {
        "key": "OU:1.5:UNDER",
        "odds": 3.9535,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_2.5",
    "odds": [
      {
        "key": "OU:2.5:OVER",
        "odds": 1.8024,
      },
      {
        "key": "OU:2.5:UNDER",
        "odds": 2.0194,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_3.5",
    "odds": [
      {
        "key": "OU:3.5:OVER",
        "odds": 2.9602,
      },
      {
        "key": "OU:3.5:UNDER",
        "odds": 1.4041,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_4.5",
    "odds": [
      {
        "key": "OU:4.5:OVER",
        "odds": 5.3494,
      },
      {
        "key": "OU:4.5:UNDER",
        "odds": 1.1587,
      },
    ],
  },
]
`;

exports[`golden pricing snapshots > prices "low scoring" stably 1`] = `
[
  {
    "bookSum": 1.05,
    "key": "1X2",
    "odds": [
      {
        "key": "1X2:HOME",
        "odds": 2.9714,
      },
      {
        "key": "1X2:DRAW",
        "odds": 2.2765,
      },
      {
        "key": "1X2:AWAY",
        "odds": 3.6471,
      },
    ],
  },
  {
    "bookSum": 2.1,
    "key": "DC",
    "odds": [
      {
        "key": "DC:1X",
        "odds": 1.2995,
      },
      {
        "key": "DC:12",
        "odds": 1.6196,
      },
      {
        "key": "DC:X2",
        "odds": 1.4025,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "DNB",
    "odds": [
      {
        "key": "DNB:HOME",
        "odds": 1.7326,
      },
      {
        "key": "DNB:AWAY",
        "odds": 2.1149,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "BTTS",
    "odds": [
      {
        "key": "BTTS:YES",
        "odds": 3.6997,
      },
      {
        "key": "BTTS:NO",
        "odds": 1.2825,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "CS",
    "odds": [
      {
        "key": "CS:0-0",
        "odds": 3.4216,
      },
      {
        "key": "CS:0-1",
        "odds": 6.299,
      },
      {
        "key": "CS:0-2",
        "odds": 19.0287,
      },
      {
        "key": "CS:0-3",
        "odds": 91.7098,
      },
      {
        "key": "CS:0-4",
        "odds": 585.4752,
      },
      {
        "key": "CS:0-5",
        "odds": 4648.34,
      },
      {
        "key": "CS:1-0",
        "odds": 5.3618,
      },
      {
        "key": "CS:1-1",
        "odds": 7.5751,
      },
      {
        "key": "CS:1-2",
        "odds": 26.9633,
      },
      {
        "key": "CS:1-3",
        "odds": 129.9512,
      },
      {
        "key": "CS:1-4",
        "odds": 829.6078,
      },
      {
        "key": "CS:1-5",
        "odds": 6586.6145,
      },
      {
        "key": "CS:2-0",
        "odds": 14.079,
      },
      {
        "key": "CS:2-1",
        "odds": 23.1929,
      },
      {
        "key": "CS:2-2",
        "odds": 75.213,
      },
      {
        "key": "CS:2-3",
        "odds": 362.4931,
      },
      {
        "key": "CS:2-4",
        "odds": 2314.1546,
      },
      {
        "key": "CS:2-5",
        "odds": 18373.072,
      },
      {
        "key": "CS:3-0",
        "odds": 58.3663,
      },
      {
        "key": "CS:3-1",
        "odds": 96.1489,
      },
      {
        "key": "CS:3-2",
        "odds": 311.8042,
      },
      {
        "key": "CS:3-3",
        "odds": 1502.7581,
      },
      {
        "key": "CS:3-4",
        "odds": 9593.601,
      },
      {
        "key": "CS:3-5",
        "odds": 76167.7379,
      },
      {
        "key": "CS:4-0",
        "odds": 320.5066,
      },
      {
        "key": "CS:4-1",
        "odds": 527.9821,
      },
      {
        "key": "CS:4-2",
        "odds": 1712.2084,
      },
      {
        "key": "CS:4-3",
        "odds": 8252.0865,
      },
      {
        "key": "CS:4-4",
        "odds": 52681.2852,
      },
      {
        "key": "CS:4-5",
        "odds": 418259.4526,
      },
      {
        "key": "CS:5-0",
        "odds": 2188.8121,
      },
      {
        "key": "CS:5-1",
        "odds": 3605.7094,
      },
      {
        "key": "CS:5-2",
        "odds": 11693.0588,
      },
      {
        "key": "CS:5-3",
        "odds": 56355.3686,
      },
      {
        "key": "CS:5-4",
        "odds": 359772.4333,
      },
      {
        "key": "CS:5-5",
        "odds": 2856388.5708,
      },
      {
        "key": "CS:OTHER",
        "odds": 6323.8964,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_0.5",
    "odds": [
      {
        "key": "OU:0.5:OVER",
        "odds": 1.3594,
      },
      {
        "key": "OU:0.5:UNDER",
        "odds": 3.1808,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_1.5",
    "odds": [
      {
        "key": "OU:1.5:OVER",
        "odds": 2.4247,
      },
      {
        "key": "OU:1.5:UNDER",
        "odds": 1.5684,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_2.5",
    "odds": [
      {
        "key": "OU:2.5:OVER",
        "odds": 5.6218,
      },
      {
        "key": "OU:2.5:UNDER",
        "odds": 1.1466,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_3.5",
    "odds": [
      {
        "key": "OU:3.5:OVER",
        "odds": 11.8918,
      },
      {
        "key": "OU:3.5:UNDER",
        "odds": 1.0353,
      },
    ],
  },
  {
    "bookSum": 1.05,
    "key": "OU_4.5",
    "odds": [
      {
        "key": "OU:4.5:OVER",
        "odds": 17.621,
      },
      {
        "key": "OU:4.5:UNDER",
        "odds": 1.0068,
      },
    ],
  },
]
`;
